# SimulatedCrewPairing-CPP

./: .directory  CMakeLists.txt  LICENSE  Makefile  README.md
headers/: flight.hpp  individual.hpp
instances/: Instancias - 96 vuelos.csv  instancia.csv  instancia2.csv  instancia3.csv
lib/: agency.cpp  agency.hpp  flight.cpp  flight.hpp  individual.cpp  individual.hpp  nature.cpp  nature.hpp  natureV.cpp  operators.cpp  operators.hpp  operatorsV.cpp  population.cpp  population.hpp  utils.cpp
logs/: Output0.txt  Output1.txt  Output10.txt  Output11.txt  Output12.txt  Output13.txt  Output14.txt  Output15.txt  Output16.txt  Output17.txt  Output18.txt  Output19.txt  Output2.txt  Output20.txt  Output21.txt  Output22.txt  Output23.txt  Output24.txt  Output25.txt  Output26.txt  Output27.txt  Output28.txt  Output29.txt  Output3.txt  Output30.txt  Output31.txt  Output32.txt  Output33.txt  Output34.txt  Output35.txt  Output36.txt  Output37.txt  Output38.txt  Output39.txt  Output4.txt  Output40.txt  Output41.txt  Output42.txt  Output43.txt  Output44.txt  (+9 more)
src/: main.cpp
